--- a/src/main/resources/static/css/table.css
+++ b/src/main/resources/static/css/table.css
@@ -72,7 +72,7 @@ html, body {
 .table-header {
     justify-content: space-between;
     align-items: center;
-    background: #fff;
+    /*background: #fff;*/
     padding: 10px;
     position: sticky;
     top: 0;
@@ -117,7 +117,7 @@ html, body {
     text-align: center;
 }
 
-.order-history, .order-button {
+.order-history, .order-button, .approve {
     display: inline-block;
     padding: 12px 29px;
     font-size: 16px;
@@ -132,7 +132,7 @@ html, body {
     position: relative;
     overflow: hidden;
 }
-.order-history:before, .order-button:before {
+.order-history:before, .order-button:before, .approve:before {
     content: "";
     position: absolute;
     top: 50%;
@@ -145,15 +145,15 @@ html, body {
     transform: translate(-50%, -50%) scale(0);
 }
 
-.order-history:hover::before, .order-button:hover::before {
+.order-history:hover::before, .order-button:hover::before, .approve:hover::before {
     transform: translate(-50%, -50%) scale(1);
 }
-.order-history:hover, .order-button:hover {
+.order-history:hover, .order-button:hover, .approve:hover {
     background: linear-gradient(135deg, #0056b3, #003f7f);
     box-shadow: 0 6px 15px rgba(0, 123, 255, 0.4);
 }
 
-.order-history:active, .order-button:active {
+.order-history:active, .order-button:active, .approve:active {
     transform: scale(0.95);
 }
 .fixed-footer {
@@ -223,4 +223,49 @@ p {
         font-size: 15px;
     }
 
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-content table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.modal-content th, .modal-content td {
+    padding: 8px;
+    text-align: left;
+    border: 1px solid #ddd;
 }
